# site

./: .eslintrc  .gitignore  .npmrc  .prettierrc.toml  CNAME  Cargo.toml  README.md  astro.config.mjs  index.html  keybase.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  tsconfig.json  vercel.json
.astro/: types.d.ts
.github/workflows/: preview.yaml  production.yaml
.zed/: settings.json
patches/: solid-dismiss@1.7.121.patch
public/: keybase.txt  manifest.json  watermark.xcf
snake/: Cargo.toml  package.json
snake/src/: config.rs  food.rs  game.rs  grid.rs  lib.rs  plugins.rs  snake.rs
src/: content.config.ts  path.ts  photos.ts  util.ts  watermark.xcf
src/components/: DismissibleCard.tsx  Dropdown.tsx  FloatingCard.tsx  IconButton.astro  Link.tsx  Navbar.astro  PhotoGrid.astro  Placeholder.astro  Preview.astro  PreviewGrid.astro  Profile.tsx  SmallProfile.tsx  Snake.tsx  SpotifyEmbed.tsx  StatusText.tsx  Statuses.astro  Statuses.tsx
src/components/activity/: CustomStatus.module.css  CustomStatus.tsx  Spotify.module.css  Spotify.tsx  Status.module.css  Status.tsx  StatusIcon.module.css  StatusIcon.tsx  UserProfile.module.css  UserProfile.tsx
src/components/lanyard/: useLanyard.tsx
src/components/profile/: CustomStatus.tsx  Game.tsx  Profile.tsx  SmallProfile.tsx  Spotify.tsx  StatusText.tsx  UserInfo.tsx
src/components/status/: ActivityPill.tsx  CurrentTime.tsx  GameCard.tsx  Pill.tsx  SpotifyPill.tsx  (+3 more)
src/content/: config.ts
src/layouts/: Content.astro  Gallery.astro  Layout.astro
src/pages/: index.astro  snake.astro
(+20 files in other folders)
