[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
rand = "0.8.5"
wasm-bindgen = "0.2.83"

[dependencies.bevy]
version = "0.9.1"
default-features = false
features = ["bevy_asset", "bevy_winit", "render"]
